--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,36 @@
 {
-    "name": "wohnparc/moeware-client",
-    "description": "The PHP client library for the Moeware GraphQL API",
-    "type": "library",
-    "autoload": {
-        "psr-4": {
-            "Wohnparc\\Moeware\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Wohnparc Dev Team",
-            "email": "dev@wohnparc.de"
-        }
-    ],
-    "require": {
-        "softonic/graphql-client": "^2.2"
+  "name": "wohnparc/moeware-client",
+  "description": "The PHP client library for the Moeware GraphQL API",
+  "type": "library",
+  "license": "proprietary",
+  "authors": [
+    {
+      "name": "Wohnparc Dev Team",
+      "email": "dev@wohnparc.de"
     }
+  ],
+  "autoload": {
+    "psr-4": {
+      "Wohnparc\\Moeware\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
+    }
+  },
+  "require": {
+    "php": "^7.4",
+    "softonic/graphql-client": "^1.3"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.5",
+    "pestphp/pest": "^1.21",
+    "phpstan/phpstan": "^1.4"
+  },
+  "config": {
+    "allow-plugins": {
+      "pestphp/pest-plugin": true
+    }
+  }
 }
