--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,13 @@
   },
   "require": {
     "php": ">=8.0",
-    "softonic/graphql-client": "^2.2.0"
+    "softonic/graphql-client": "^2.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.5.28",
-    "pestphp/pest": "^v1.22.3",
-    "phpstan/phpstan": "^1.9.14"
+    "phpunit/phpunit": "^9.5",
+    "pestphp/pest": "^v1.22",
+    "phpstan/phpstan": "^1.9",
+    "friendsofphp/php-cs-fixer": "^3.13"
   },
   "autoload": {
     "psr-4": {
