--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Install Composer dependencies
         run: composer install --prefer-dist --no-interaction --no-progress --no-suggest
 
-      - name: Run Static Code Analysis
+      - name: Format
         run: vendor/bin/php-cs-fixer fix src
 
       - name: Commit Changes
@@ -92,49 +92,5 @@ jobs:
       - name: Install Composer dependencies
         run: composer install --prefer-dist --no-interaction --no-progress --no-suggest
 
-      - name: Run Static Code Analysis
+      - name: Analyse
         run: vendor/bin/phpstan analyse --memory-limit 512M
-
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        php-versions: ['8.0', '8.1', '8.2']
-    name: PHP ${{ matrix.php-versions }} tests on ${{ matrix.os }}
-    steps:
-
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php-versions }}
-          coverage: none
-          tools: phpunit:${{ matrix.phpunit-version }}, composer:v2
-
-      - name: Check PHP Version
-        run: php -v
-
-      - name: Check Composer Version
-        run: composer -V
-
-      - name: Get Composer Cache Directory
-        id: composer-cache
-        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-
-      - name: Cache Composer dependencies
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
-          restore-keys: ${{ runner.os }}-composer-
-
-      - name: Validate composer.json & composer.lock
-        run: composer validate --strict
-
-      - name: Install Composer dependencies
-        run: composer install --prefer-dist --no-interaction --no-progress --no-suggest
-
-      - name: Run Static Code Analysis
-        run: vendor/bin/pest
