--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,9 +1,4 @@
-includes:
-    - vendor/phpstan/phpstan/conf/bleedingEdge.neon
-
 parameters:
-    level: 8
+    level: max
     paths:
         - src
-
-    inferPrivatePropertyTypeFromConstructor: true
